--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,12 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
 .idea/dictionaries
+.idea/gradle.xml
 .idea/libraries
+.idea/misc.xml
+.idea/tasks.xml
+.idea/workspace.xml
 
 # Keystore files
 *.jks
