--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,20 @@
 apply plugin: 'com.android.application'
 
+// file containing keystore configuration
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+// load keytore configuration
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+    signingConfigs {
+        releaseConfig {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
     defaultConfig {
@@ -10,11 +24,15 @@ android {
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
+        signingConfig signingConfigs.releaseConfig
     }
     buildTypes {
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.releaseConfig
         }
+    }
+    productFlavors {
     }
 }
 
